<resources>
    <string name="app_name">Trainees Management</string>
    <string name="profile">Profile</string>
    <string name="trainee_home">Trainee Home</string>
    <string name="project_infos">Project infos</string>
    <string name="tasks_list">Tasks List</string>
    <string name="rapports">Rapports</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pass">****************</string>
    <string name="skysoft_gmail_com">skysoft@gmail.com</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="create_an_account_here">Create an account here</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new">Create a new</string>
    <string name="skysoft_technology">SkySoft Technology</string>
    <string name="full_name">FullName</string>
    <string name="phone_number">Phone Number</string>
    <string name="number">+237 668524515</string>
    <string name="passconfirm">*******************</string>
    <string name="conpass">*****************</string>
    <string name="sign_up_now">SIGN UP</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_gmail_com">skysoft@gmail.com</string>
    <string name="the_management_of_the_trainees_as_simple_with_us">The management of the trainees as simple with us</string>
    <string name="manage_trainees">Manage trainees</string>
    <string name="continue_to_begin">Continue to begin</string>
    <string name="sky_managetrainees">TraineesManagement</string>
    <string name="click_to_begin">Click to begin</string>
    <string name="fullname_of_trainee">Trainee FullName</string>
    <string name="place_of_residence">Place of Residence</string>
    <string name="university">University</string>
    <string name="_237_665845521">+237 696645200</string>
    <string name="fullname">Birth Day</string>
    <string name="skysoft_techn">19-02-2002</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="create_a_rapport">Create a rapport</string>
    <string name="add_a_report">Add a report</string>
    <string name="date_today">Date today</string>
    <string name="date_here">Date here</string>
    <string name="subsject">Subsject</string>
    <string name="report">Report</string>
    <string name="write_report">Write here</string>
    <string name="write_here">Write here</string>
    <string name="save_report">Save report</string>
    <string name="list_reports">List reports</string>
</resources>