<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveReport">

    <RelativeLayout
        android:id="@+id/cadre"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/add_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/add_a_report"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/home_report"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/home" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cadre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_today"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/date_here"
            android:textColor="#000000"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subsject"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/write_here"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/grey" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:background="@null"
                    android:hint="@string/write_report"
                    android:textAlignment="textStart"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/grey" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnsave_report"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_button"
                    android:text="@string/save_report"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textCreateAccont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:text="@string/list_reports"
                    android:textSize="23sp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>



    </RelativeLayout>